# libword2vec

./: CMakeLists.txt  LICENSE.md  README.md  demo.cc  ordered_vector.h  result_item.h  result_set.cc  result_set.h  words_model.h
lib/: ordered_vector.h  result_item.cc  result_item.h  result_set.cc  result_set.h  words_model.cc  words_model.h
src/: main.cc
